point app to udc context

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#customer management system
+#universal data converter
 jsf.primefaces.theme=redmond
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
-server.context-path=/cms
+server.context-path=/udc
 
 
 spring.datasource.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/cms
+spring.datasource.url=jdbc:mysql://localhost:3306/udc
 spring.datasource.username=root
 spring.datasource.password=root
